<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.wright.ceg4110.fooddroid.AnalysisResultsActivity">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:contentDescription="@string/image_preview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/image_name"/>
            <TextView
                android:id="@+id/image_name_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/empty"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contains_food"/>
            <TextView
                android:id="@+id/contains_food_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certainty"/>
            <TextView
                android:id="@+id/certainty_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
